force-app/main/default/objects/Project_Execution_Plan_and_Permit__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Receive_Date__c</fullName>
        <label>วันที่ได้รับ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BE_Permit_Department__c</fullName>
        <formula>IF(AND(Permit_Depart_Name__c != null, Other_Permit_Department__c == null), Permit_Depart_Name__c, IF(AND(Permit_Depart_Name__c == null, Other_Permit_Department__c != null), Other_Permit_Department__c, Permit_Depart_Name__c))</formula>
        <label>หน่วยงานออกใบอนุญาต</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Permit_Name__c</fullName>
        <formula>IF(AND(Permit__c != null, Other_Permit__c == null), Permit__r.Permit_Topic__c, IF(AND(Permit__c == null, Other_Permit__c != null), Other_Permit__c, Permit__r.Permit_Topic__c))</formula>
        <label>เรื่องที่ขออนุญาต</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Receive_Date__c</fullName>
        <label>วันที่คาดว่าจะได้รับ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Permit_Department__c</fullName>
        <label>หน่วยงานที่ออกใบอนุญาต(อื่นๆ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Permit__c</fullName>
        <label>เรื่องที่ขออนุญาต(อื่นๆ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Depart_Name__c</fullName>
        <formula>Text(Permit__r.Permit_Department__c)</formula>
        <label>หน่วยงานออกใบอนุญาต</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Name__c</fullName>
        <formula>Permit__r.Permit_Topic__c</formula>
        <label>เรื่องที่ขออนุญาต</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>Permit__c</referenceTo>
        <relationshipName>Project_Execution_Plan_and_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Execution_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Execution Plan</label>
        <referenceTo>Project_Execution_Plan__c</referenceTo>
        <relationshipName>Project_Execution_Plan_and_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Execution Plan and Permit*</label>
    <nameField>
        <displayFormat>PNP-{00000}</displayFormat>
        <label>Work Process</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Permit_for_Other</fullName>
        <active>true</active>
        <description>Fill in Other Permit and Other Permit Department when Permit is &quot;Other&quot;</description>
        <errorConditionFormula>AND(Permit__c == null, OR(ISBLANK(Other_Permit__c), ISBLANK( Other_Permit_Department__c)))</errorConditionFormula>
        <errorMessage>กรุณากรอก &apos;ใบอนุญาตอื่นๆ&apos; และ &apos;หน่วยงานที่อนุญาตอื่นๆ&apos;</errorMessage>
    </validationRules>
</CustomObject>